<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    tools:context=".ui.JournalCanvasEditorActivity">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/space_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:includeFontPadding="false"
            android:text="@string/journal_canvas_editor"
            android:textColor="@color/text_primary"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/undo_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="@dimen/space_8"
            android:background="@drawable/bg_toolbar_button"
            android:contentDescription="@string/undo"
            android:padding="@dimen/space_8"
            android:src="@drawable/ic_undo" />

        <ImageButton
            android:id="@+id/redo_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="@dimen/space_8"
            android:background="@drawable/bg_toolbar_button"
            android:contentDescription="@string/redo"
            android:padding="@dimen/space_8"
            android:src="@drawable/ic_redo" />

        <ImageButton
            android:id="@+id/layers_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="@dimen/space_8"
            android:background="@drawable/bg_toolbar_button"
            android:contentDescription="@string/layers"
            android:padding="@dimen/space_8"
            android:src="@drawable/ic_layers" />

        <ImageButton
            android:id="@+id/export_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="@dimen/space_8"
            android:background="@drawable/bg_toolbar_button"
            android:contentDescription="@string/export"
            android:padding="@dimen/space_8"
            android:src="@drawable/ic_export" />

        <TextView
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/bg_primary_button"
            android:drawableStart="@drawable/ic_save"
            android:drawablePadding="@dimen/space_8"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingHorizontal="@dimen/space_16"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <com.starnest.journalcanvaseditor.render.JournalCanvasView
        android:id="@+id/journal_canvas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar" />

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="0dp"
        android:layout_height="@dimen/bottom_bar_height"
        android:background="@drawable/bg_bottom_bar"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/space_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include
            android:id="@+id/action_text"
            layout="@layout/item_editor_action" />

        <include
            android:id="@+id/action_image"
            layout="@layout/item_editor_action" />

        <include
            android:id="@+id/action_grid"
            layout="@layout/item_editor_action" />

        <include
            android:id="@+id/action_reset"
            layout="@layout/item_editor_action" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
